--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mapa-supermercado",
+  "name": "supermercado-mapa",
   "version": "1.0.0",
-  "description": "Um mapa onde o código precisa saber qual o menor caminho para passar por todos produtos",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "npx ts-node main.ts",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cli-color": "^2.0.3",
+    "prompt-sync": "^4.2.0",
     "ts-node": "^10.9.1"
   }
 }
